# pigeonwar_client

./: .gitmodules  CMakeLists.txt
cmake/: FindSDL2TTF.cmake  FindSDL2_image.cmake  animations.cmake
config/: animation_plugins.json
src/: animation.cpp  animation.h  animation_factory.cpp  animation_factory.h  animation_interface.h  animation_plugin_provider_interface.h  board.cpp  board.h  button.cpp  button.h  button_id.h  color.h  config.h.in  data_packs.h  defs.h  drawable.h  entities_collection.cpp  entities_collection.h  entity.cpp  entity.h  entity_properties.h  game.cpp  game.h  game_handler.h  game_state.cpp  game_state.h  index_pos_conversion.h  json_conversions.h  load_resources.cpp  load_resources.h  local_state.cpp  local_state.h  main.cpp  message_processor.cpp  message_processor.h  panel.cpp  panel.h  renderer.h  text.cpp  text.h  (+13 more)
src/animations/: CMakeLists.txt  animation.cpp  animation.h  animation_helper.h
src/animations/common/: common.cpp
src/animations/destroyer/: destroyer.cpp
src/animations/monk/: monk.cpp
src/animations/native/: native.cpp
src/animations/poisoner/: poisoner.cpp
src/animations/saberhand/: saberhand.cpp
src/animations/samurai/: samurai.cpp
src/animations/shooter/: shooter.cpp
src/animations/sniper/: sniper.cpp
